DSSSM-393 #time 31m adjusted width of slider to accomodate moving buttons more to left and right to help prevent overlap

--- a/css/dss_digital.css
+++ b/css/dss_digital.css
@@ -1096,7 +1096,10 @@ body > div#islandora-openseadragon > form > #openseadragon-size-transform-contai
 
 .islandora-solr-facet-date-slider {
 	
-	width:85%;
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
 }
 
 /* enure pagination controls do not display on search results */
